--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     implementation 'androidx.activity:activity-ktx:1.5.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
+
+    //splash screen android
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 }
