--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/Theme.YoDemo"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
+            android:theme="@style/Theme.SplashScreen."
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
